# eventsource-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  docker-compose.test.yml  how_to_organize_a_python_project.md  mkdocs.yml  pyproject.toml
.claude/: AGENTS.md  settings.json  team.yaml
.claude/agents/: backend-implementer.md  code-reviewer.md  debugger.md  event-modeler.md  refactorer.md  test-generator.md
.claude/rules/: architecture.md  commits.md  definition-of-done.md  testing.md
.claude/skills/blossom/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
docs/: architecture.md  core-surface.md  eventsource-py.code-workspace  faq.md  getting-started.md  index.md  infrastructure-tracking.md  installation.md  migration-guide.md
docs/adrs/: 0000-template.md  0001-async-first-design.md  0002-pydantic-event-models.md  0003-optimistic-locking.md  0004-projection-error-handling.md  0005-api-design-patterns.md  0006-event-registry-serialization.md  0007-remove-sync-event-store.md  0008-kafka-event-bus-integration.md  index.md
docs/api/: aggregates.md  bus.md  events.md  index.md  observability.md  projections.md  snapshots.md  stores.md  subscriptions.md
docs/development/: code-structure.md  testing.md
docs/examples/: basic-order.md  multi-tenant.md  projections.md  snapshotting.md  sqlite-usage.md  testing.md
docs/guides/: authentication.md  error-handling.md  event-bus.md  fanout-exchange.md  kafka-event-bus.md  kafka-metrics.md  kubernetes-deployment.md  multi-tenant.md  observability.md  production.md  repository-pattern.md  snapshotting-migration.md  snapshotting.md  sqlite-backend.md  subscription-migration.md  subscriptions.md
docs/migration/: README.md  api-reference.md  architecture.md  migration-guide.md  monitoring.md  runbook.md  troubleshooting.md
docs/tutorials/: 01-introduction.md  02-first-event.md  03-first-aggregate.md  04-event-stores.md  05-repositories.md  06-projections.md  07-event-bus.md  08-testing.md  09-error-handling.md  10-checkpoints.md  11-postgresql.md  12-sqlite.md  13-subscriptions.md  14-snapshotting.md  15-production.md  16-multi-tenancy.md  17-redis.md  18-kafka.md  19-rabbitmq.md  20-observability.md  21-advanced-aggregates.md  index.md
examples/: __init__.py  aggregate_example.py  basic_usage.py  projection_example.py
examples/subscriptions/: README.md  __init__.py  basic_projection.py  multi_subscriber.py  resilient_projection.py
memory/agents/architect/: learnings.md
memory/agents/backend/: learnings.md
memory/agents/domain/: learnings.md
memory/agents/tester/: learnings.md
memory/sessions/: last.md
memory/team/: decisions.md  retro-history.md
scripts/: validate_examples.py
src/eventsource/: __init__.py  config.py  exceptions.py  protocols.py  types.py
src/eventsource/aggregates/: README.md  __init__.py  base.py  repository.py  snapshot_manager.py  task_manager.py
src/eventsource/bus/: README.md  __init__.py  interface.py  kafka.py  memory.py  rabbitmq.py  redis.py
src/eventsource/events/: __init__.py  base.py  registry.py
src/eventsource/handlers/: __init__.py  adapter.py  decorators.py  registry.py
src/eventsource/locks/: __init__.py  postgresql.py
src/eventsource/migration/: README.md  __init__.py  bulk_copier.py  consistency.py  coordinator.py  cutover.py  dual_write.py  exceptions.py  metrics.py  models.py  position_mapper.py  router.py  status_streamer.py  subscription_migrator.py  sync_lag_tracker.py  write_pause.py
src/eventsource/migrations/: SCHEMA_DESIGN.md  __init__.py
src/eventsource/multitenancy/: __init__.py  context.py  events.py  exceptions.py  repository.py
src/eventsource/observability/: __init__.py  attributes.py  tracer.py  tracing.py
src/eventsource/projections/: README.md  __init__.py  base.py  checkpoint_manager.py  coordinator.py  decorators.py  dlq_manager.py  protocols.py  retry.py
src/eventsource/readmodels/: __init__.py  base.py  exceptions.py  in_memory.py  postgresql.py  projection.py  query.py  repository.py  schema.py  sqlite.py
src/eventsource/repositories/: __init__.py  _connection.py  _json.py  checkpoint.py  dlq.py  outbox.py
src/eventsource/serialization/: __init__.py  json.py
src/eventsource/snapshots/: __init__.py  exceptions.py  in_memory.py  interface.py  postgresql.py  sqlite.py  strategies.py
src/eventsource/stores/: README.md  __init__.py  _compat.py  _type_converter.py  in_memory.py  interface.py  (+2 more)
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  conftest.py  test_event_store.py  test_projections.py  test_repositories.py  test_serialization.py
tests/fixtures/: __init__.py  aggregates.py  events.py
tests/integration/: __init__.py  conftest.py  test_imports.py
tests/locks/: __init__.py  test_postgresql_locks.py
tests/repositories/: __init__.py  test_sqlite_repos.py
tests/stores/: __init__.py  test_read_all_tenant_filter.py  test_sqlite_event_store.py
tests/unit/: __init__.py  test_additional_coverage.py  test_aggregate_repository.py  test_aggregate_root.py  test_catchup_runner.py  test_checkpoint_position.py  test_checkpoint_repository.py  test_conformance.py  test_connection_helper.py  test_dlq_repository.py  test_domain_event.py  test_edge_cases.py  test_event_bus.py  test_event_registry.py  test_event_store_interface.py  test_event_type_auto.py  test_eventstore_global_position.py  test_exceptions.py  test_fixtures.py  test_in_memory_event_store.py  test_json_encoder.py  test_kafka_event_bus.py  test_live_runner.py  test_outbox_repository.py  test_postgresql_event_store.py  test_projection_base.py  test_projection_coordinator.py  test_projection_decorators.py  test_projection_protocols.py  test_protocols.py  test_rabbitmq_event_bus.py  test_rabbitmq_exports.py  test_redis_event_bus.py  test_redis_event_bus_tracing.py  test_subscription_config.py  test_subscription_manager.py  test_timestamp_types.py  test_transition.py
(+225 files in other folders)
