[project]
name = "eventsource-py"
version = "0.4.0"
description = "Production-ready event sourcing library for Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ty Evans", email = "tyevans@gmail.com"}
]
keywords = ["event-sourcing", "cqrs", "ddd", "domain-driven-design", "events"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "redis>=5.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
postgresql = [
    "asyncpg>=0.27.0,<1.0",
]
sqlite = [
    "aiosqlite>=0.19.0,<1.0",
]
redis = [
    "redis>=5.0,<6.0",
]
telemetry = [
    "opentelemetry-api>=1.0,<2.0",
    "opentelemetry-sdk>=1.0,<2.0",
]
rabbitmq = [
    "aio-pika>=9.0.0",
]
kafka = [
    "aiokafka>=0.9.0,<1.0.0",
]
kafka-schema-registry = [
    "aiokafka>=0.9.0,<1.0.0",
    "confluent-kafka>=2.0.0,<3.0.0",
]
all = [
    "eventsource-py[postgresql,sqlite,redis,rabbitmq,kafka,telemetry]",
]
all-backends = [
    "eventsource-py[postgresql,sqlite]",
]
benchmark = [
    "pytest-benchmark>=4.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.8",
    "ruff>=0.14.8",
    "testcontainers>=4.0",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/tyevans/eventsource-py"
Documentation = "https://tyevans.github.io/eventsource-py"
Repository = "https://github.com/tyevans/eventsource-py"
Changelog = "https://github.com/tyevans/eventsource-py/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eventsource"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/eventsource --cov-report=term-missing"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: marks tests as integration tests (may require docker)",
    "postgres: marks tests that require PostgreSQL",
    "sqlite: marks tests that require SQLite",
    "redis: marks tests that require Redis",
    "kafka: marks tests that require Kafka (excluded by default, run with '-m kafka')",
    "rabbitmq: marks tests that require RabbitMQ (excluded by default, run with '-m rabbitmq')",
    "slow: marks tests as slow-running",
    "e2e: marks tests as end-to-end integration tests",
    "benchmark: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["src/eventsource"]

[tool.coverage.paths]
source = ["src/eventsource"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aio_pika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiormq.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiokafka.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["eventsource"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Allow assert statements

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.0",
]
